<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ClientActivity" android:background="#404040">

    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="#FFFFFF"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewNom"
            app:layout_constraintStart_toStartOf="@+id/toolbar" android:layout_marginStart="32dp"
            android:text="Nom en dur" android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/toolbar" android:layout_marginBottom="8dp" android:textSize="30sp"/>
    <TextView
            android:text="@string/adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAdressName" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar" android:textColor="#FFFFFF" android:textSize="20sp"/>
    <TextView
            android:text="1 rue rentré en dur"
            android:background="@drawable/textlines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewAdress" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewAdressName" android:textColor="#C2B5B5"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/Complement_Adresse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCompAdressName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textViewAdress"
            android:textSize="20sp" android:textColor="#FFFFFF"/>
    <TextView
            android:text="Résidence rentrée en dur"
            android:background="@drawable/textlines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCompAdresse" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCompAdressName" android:textSize="18sp"
            android:textColor="#C2B5B5"/>
    <TextView
            android:text="@string/code_postal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCodePostalName" android:layout_marginEnd="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textViewCompAdresse"
            android:textColor="#FFFFFF" android:textSize="20sp"/>
    <TextView
            android:text="33150 en dur"
            android:background="@drawable/textlines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCodePostal" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCodePostalName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="50dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp" android:textSize="18sp" android:textColor="#C2B5B5"/>
    <TextView
            android:text="@string/telephone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTelName" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewCodePostal" android:textColor="#FFFFFF"
            android:textSize="20sp"/>
    <TextView
            android:text="60671103dur"
            android:background="@drawable/textlines"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewTel" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="50dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="50dp" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTelName" android:textSize="18sp" android:textColor="#C2B5B5"/>
    <ImageView
            android:src="@drawable/contact"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageViewContacts" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="70dp" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewTel"/>
    <ImageView
            android:src="@drawable/materiels"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageViewMateriel" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="70dp"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/textViewTel"/>
    <TextView
            android:text="Contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewContacts"
            app:layout_constraintTop_toBottomOf="@+id/imageViewContacts"
            app:layout_constraintEnd_toEndOf="@+id/imageViewContacts"
            app:layout_constraintStart_toStartOf="@+id/imageViewContacts" android:textSize="16sp"
            android:textColor="#FFFFFF"/>
    <TextView
            android:text="Matériels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewMateriel" app:layout_constraintEnd_toEndOf="@+id/imageViewMateriel"
            app:layout_constraintStart_toStartOf="@+id/imageViewMateriel"
            app:layout_constraintTop_toBottomOf="@+id/imageViewMateriel" android:textSize="16sp"
            android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="0.606"/>
</android.support.constraint.ConstraintLayout>